--- a/SASS/_base.scss
+++ b/SASS/_base.scss
@@ -43,11 +43,10 @@ html {
 }
 
 body {
-  // width: 100%;
   font-family: "Public Sans", sans-serif;
   font-weight: 400;
   line-height: 1.3;
-  //   background-color: var(--color-very-light-gray);
-  background-color: palegreen;
+  background-color: var(--color-very-light-gray);
+  font-size: cR(18px);
   overflow-x: hidden;
 }
