--- a/SASS/_components.scss
+++ b/SASS/_components.scss
@@ -318,3 +318,120 @@
     }
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .header__nav {
+    padding: 20px 20px;
+    &__items {
+      display: none;
+    }
+  }
+
+  .btn--header {
+    display: none;
+  }
+  .header__nav__hamburger {
+    display: block;
+  }
+  .hero {
+    margin: 0;
+    &__images {
+      &__background {
+        display: none;
+        &__phone {
+          display: block;
+          // grid-row: 1 / span 1;
+        }
+      }
+      &__phone {
+        left: -120px;
+        top: -216px;
+        transform: scale(0.6);
+      }
+    }
+    &__details {
+      grid-row: 2 / span 1;
+      margin: -60px 20px 80px 20px;
+      align-items: center;
+    }
+    &__p {
+      text-align: center;
+    }
+  }
+
+  .features {
+    padding: 30px 20px;
+    &__p {
+      text-align: center;
+    }
+
+    &__details {
+      width: 100%;
+      align-items: center;
+    }
+
+    &__card {
+      align-items: center;
+    }
+  }
+
+  .articles {
+    padding: 40px 20px;
+  }
+
+  .footer {
+    padding: 30px 20px;
+    flex-direction: column;
+    align-items: center;
+    gap: 25px;
+
+    &__company {
+      gap: 25px;
+
+      &__social {
+        width: 120%;
+        gap: 10px;
+        align-self: center;
+      }
+    }
+
+    &__nav {
+      &__items {
+        gap: 5px;
+
+        & li {
+          text-align: center;
+        }
+      }
+    }
+    &__invite {
+      margin: 10px 0 10px 0;
+      align-items: center;
+      gap: 10px;
+
+      &__arr {
+        font-size: 14px;
+        color: var(--color-grayish-blue);
+        font-weight: 300;
+        margin-bottom: 10px;
+      }
+    }
+  }
+  .heading--1 {
+    text-align: center;
+    font-size: 35px;
+  }
+  .heading--2 {
+    text-align: center;
+    font-size: 25px;
+  }
+  .heading--3 {
+    font-size: 20px;
+  }
+  .heading--4 {
+    font-size: 18px;
+  }
+  .paragraph {
+    font-size: 16px;
+  }
+}
