--- a/SASS/_base.scss
+++ b/SASS/_base.scss
@@ -1,11 +1,3 @@
-// .attribution {
-//   font-size: 11px;
-//   text-align: center;
-// }
-// .attribution a {
-//   color: hsl(228, 45%, 44%);
-// }
-
 :root {
   --color-dark-blue: hsl(233, 26%, 24%);
   --color-lime-green: hsl(136, 65%, 51%);
@@ -19,7 +11,7 @@
   --body-font: cR(18px);
 }
 
-$bp-small: 23.4375;
+$bp-small: 37.5em;
 
 * {
   margin: 0;
