--- a/SASS/_components.scss
+++ b/SASS/_components.scss
@@ -1,25 +1,25 @@
 //Reusuable components
 
 .heading--1 {
-  font-size: 50px;
+  font-size: cR(50px);
   font-weight: 400;
   color: var(--color-dark-blue);
 }
 
 .heading--2 {
-  font-size: 34px;
+  font-size: cR(34px);
   font-weight: 400;
   color: var(--color-dark-blue);
 }
 
 .heading--3 {
-  font-size: 26px;
+  font-size: cR(26px);
   font-weight: 400;
   color: var(--color-dark-blue);
 }
 
 .heading--4 {
-  font-size: 18px;
+  font-size: cR(18px);
   font-weight: 700;
   color: var(--color-dark-blue);
   cursor: pointer;
@@ -37,7 +37,7 @@
 }
 
 .paragraph {
-  font-size: 18px;
+  font-size: cR(18px);
   color: var(--color-grayish-blue);
   font-weight: 400;
 }
@@ -53,8 +53,8 @@
       var(--color-lime-green),
       var(--color-bright-cyan)
     );
-    padding: 10px 25px;
-    border-radius: 50px;
+    padding: cR(10px) cR(25px);
+    border-radius: cR(50px);
     transition: all 0.4s;
   }
 
@@ -68,7 +68,7 @@
 
 .header__nav {
   background-color: var(--color-white);
-  padding: 20px 80px;
+  padding: cR(20px) cR(80px);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -77,35 +77,35 @@
 
   &__hamburger {
     background-color: var(--color-grayish-blue);
-    height: 3px;
-    width: 30px;
+    height: cR(3px);
+    width: cR(30px);
 
     &::before,
     &::after {
       content: "";
       display: block;
-      height: 3px;
-      width: 30px;
+      height: cR(3px);
+      width: cR(30px);
       background-color: var(--color-grayish-blue);
     }
 
     &::before {
-      transform: translateY(-8px) rotate(0);
+      transform: translateY(cR(-8px)) rotate(0);
       transition: all 0.4s;
     }
 
     &::after {
-      transform: translateY((5px)) rotate(0);
+      transform: translateY(cR(5px)) rotate(0);
       transition: all 0.4s;
     }
   }
   &__items {
     display: flex;
-    gap: 25px;
+    gap: cR(25px);
   }
 
   &__item {
-    font-size: 15px;
+    font-size: cR(15px);
     list-style: none;
     position: relative;
 
@@ -143,7 +143,7 @@
     height: 0;
 
     &::before {
-      transform: translateY(2px) rotate(45deg);
+      transform: translateY(cR(2px)) rotate(45deg);
       transition: all 0.4s;
     }
 
@@ -160,17 +160,17 @@
 
 .hero {
   display: grid;
-  margin: 0 80px;
+  margin: 0 cR(80px);
   grid-template-columns: repeat(auto-fit, minmax(cR(200px), 1fr));
-  min-height: 560px;
+  min-height: cR(560px);
 
   &__details {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    gap: 30px;
-    padding-right: 30px;
+    gap: cR(30px);
+    padding-right: cR(30px);
   }
 
   &__images {
@@ -179,8 +179,8 @@
       position: relative;
       width: 100%;
       transform: scale(1.8);
-      top: -8px;
-      left: 188px;
+      top: cR(-8px);
+      left: cR(188px);
 
       &__phone {
         display: none;
@@ -190,65 +190,65 @@
     &__phone {
       position: absolute;
       z-index: 2;
-      top: -5px;
-      left: 745px;
-      height: 760px;
+      top: cR(-5px);
+      left: cR(745px);
+      height: cR(760px);
     }
   }
 }
 
 //SECTION FEATURES
 .features {
-  padding: 80px 80px;
+  padding: cR(80px) cR(80px);
   background-color: var(--color-light-grayish-blue);
 
   &__details {
     display: flex;
     flex-direction: column;
     width: 60%;
-    gap: 20px;
-    margin-bottom: 50px;
+    gap: cR(20px);
+    margin-bottom: cR(50px);
   }
 
   &__cards {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-    gap: 25px;
+    grid-template-columns: repeat(auto-fit, minmax(cR(220px), 1fr));
+    gap: cR(25px);
   }
   &__card {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 20px;
+    gap: cR(20px);
   }
 }
 
 // SECTION ARTICLES
 
 .articles {
-  padding: 80px 80px;
+  padding: cR(80px) cR(80px);
 
   &__figures {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-    gap: 25px;
-    margin-top: 50px;
+    gap: cR(25px);
+    margin-top: cR(50px);
   }
 
   &__figure {
     display: flex;
     flex-direction: column;
     background-color: var(--color-white);
-    border-radius: 5px;
+    border-radius: cR(5px);
     overflow: hidden;
-    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 cR(1px) cR(5px) rgba(0, 0, 0, 0.1);
 
     &__image {
-      height: 180px;
+      height: cR(180px);
     }
 
     &__author {
-      font-size: 14px;
+      font-size: cR(14px);
       font-weight: 300;
       color: var(--color-grayish-blue);
     }
@@ -257,19 +257,19 @@
   &__details {
     display: flex;
     flex-direction: column;
-    padding: 20px;
-    gap: 10px;
+    padding: cR(20px);
+    gap: cR(10px);
   }
 }
 
 // SECTION FOOTER
 
 .footer {
-  padding: 80px 80px;
+  padding: cR(80px) cR(80px);
   background-color: var(--color-dark-blue);
   display: flex;
   // justify-content: space-between;
-  gap: 150px;
+  gap: cR(150px);
 
   &__company {
     display: flex;
@@ -294,15 +294,15 @@
     flex-grow: 1;
     &__items {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(min-content, 150px));
-      gap: 10px;
+      grid-template-columns: repeat(auto-fit, minmax(min-content, cR(150px)));
+      gap: cR(10px);
 
       & li {
         list-style: none;
       }
       & li a:link,
       & li a:visited {
-        font-size: 15px;
+        font-size: cR(15px);
         color: var(--color-grayish-blue);
         text-decoration: none;
         transition: all 0.4s;
@@ -322,17 +322,17 @@
     justify-content: space-between;
 
     &__arr {
-      font-size: 14px;
+      font-size: cR(14px);
       color: var(--color-grayish-blue);
       font-weight: 300;
-      margin-bottom: 10px;
+      margin-bottom: cR(10px);
     }
   }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: $bp-small) {
   .header__nav {
-    padding: 20px 20px;
+    padding: cR(20px) cR(20px);
     &__items {
       display: none;
     }
@@ -351,18 +351,17 @@
         display: none;
         &__phone {
           display: block;
-          // grid-row: 1 / span 1;
         }
       }
       &__phone {
-        left: -120px;
-        top: -216px;
+        left: cR(-120px);
+        top: cR(-216px);
         transform: scale(0.6);
       }
     }
     &__details {
       grid-row: 2 / span 1;
-      margin: -60px 20px 80px 20px;
+      margin: cR(-60px) cR(20px) cR(80px) cR(20px);
       align-items: center;
     }
     &__p {
@@ -371,7 +370,7 @@
   }
 
   .features {
-    padding: 30px 20px;
+    padding: cR(30px) cR(20px);
     &__p {
       text-align: center;
     }
@@ -387,28 +386,28 @@
   }
 
   .articles {
-    padding: 40px 20px;
+    padding: cR(40px) cR(20px);
   }
 
   .footer {
-    padding: 30px 20px;
+    padding: cR(30px) cR(20px);
     flex-direction: column;
     align-items: center;
-    gap: 25px;
+    gap: cR(25px);
 
     &__company {
       gap: 25px;
 
       &__social {
         width: 120%;
-        gap: 10px;
+        gap: cR(10px);
         align-self: center;
       }
     }
 
     &__nav {
       &__items {
-        gap: 5px;
+        gap: cR(5px);
 
         & li {
           text-align: center;
@@ -416,34 +415,34 @@
       }
     }
     &__invite {
-      margin: 10px 0 10px 0;
+      margin: cR(10px) 0 cR(10px) 0;
       align-items: center;
-      gap: 10px;
+      gap: cR(10px);
 
       &__arr {
-        font-size: 14px;
+        font-size: cR(14px);
         color: var(--color-grayish-blue);
         font-weight: 300;
-        margin-bottom: 10px;
+        margin-bottom: cR(10px);
       }
     }
   }
   .heading--1 {
     text-align: center;
-    font-size: 35px;
+    font-size: cR(35px);
   }
   .heading--2 {
     text-align: center;
-    font-size: 25px;
+    font-size: cR(25px);
   }
   .heading--3 {
-    font-size: 20px;
+    font-size: cR(20px);
   }
   .heading--4 {
-    font-size: 18px;
+    font-size: cR(18px);
   }
   .paragraph {
-    font-size: 16px;
+    font-size: cR(16px);
   }
 }
 
@@ -464,19 +463,19 @@
   display: flex;
   justify-content: center;
   margin: 0 auto;
-  padding: 25px 15px 25px 15px;
+  padding: cR(25px) cR(15px) cR(25px) cR(15px);
   width: 80%;
-  border-radius: 10px;
-  left: 40px;
+  border-radius: cR(10px);
+  left: cR(40px);
 
   &__items {
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: cR(8px);
   }
 
   &__item {
-    font-size: 16px;
+    font-size: cR(16px);
     list-style: none;
     position: relative;
 
